cmss/main/default/objects/LoanCaseDoc__c/LoanCaseDoc__c.object-meta.xml
<CustomObject>
    <description>Smluvní dokumenty - pro úvěrové případy</description>
    <label>Loan Case Doc</label>
    <nameField>
        <label>LoanCaseDocs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Case Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>