cmss/main/default/objects/LoanCaseDoc__c/fields/AcceptedAmount__c.field-meta.xml
<CustomField>
    <fullName>AcceptedAmount__c</fullName>
    <label>Accepted Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>