cmss/main/default/objects/LoanCaseDoc__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Termín</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>