cmss/main/default/objects/LoanCaseDoc__c/fields/NotAcceptedAmount__c.field-meta.xml
<CustomField>
    <fullName>NotAcceptedAmount__c</fullName>
    <label>Not Accepted Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>