cmss/main/default/objects/LoanCaseDoc__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Číslo</description>
    <label>Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100001</fullName>
            </value>
            <value>
                <fullName>10000108</fullName>
            </value>
            <value>
                <fullName>10000109</fullName>
            </value>
            <value>
                <fullName>1000011</fullName>
            </value>
            <value>
                <fullName>10000111</fullName>
            </value>
            <value>
                <fullName>10000112</fullName>
            </value>
            <value>
                <fullName>10000115</fullName>
            </value>
            <value>
                <fullName>10000116</fullName>
            </value>
            <value>
                <fullName>10000119</fullName>
            </value>
            <value>
                <fullName>10000121</fullName>
            </value>
            <value>
                <fullName>10000122</fullName>
            </value>
            <value>
                <fullName>10000125</fullName>
            </value>
            <value>
                <fullName>10000126</fullName>
            </value>
            <value>
                <fullName>10000127</fullName>
            </value>
            <value>
                <fullName>10000129</fullName>
            </value>
            <value>
                <fullName>10000131</fullName>
            </value>
            <value>
                <fullName>10000133</fullName>
            </value>
            <value>
                <fullName>10000136</fullName>
            </value>
            <value>
                <fullName>10000137</fullName>
            </value>
            <value>
                <fullName>10000140</fullName>
            </value>
            <value>
                <fullName>10000143</fullName>
            </value>
            <value>
                <fullName>10000144</fullName>
            </value>
            <value>
                <fullName>10000145</fullName>
            </value>
            <value>
                <fullName>10000146</fullName>
            </value>
            <value>
                <fullName>10000148</fullName>
            </value>
            <value>
                <fullName>10000149</fullName>
            </value>
            <value>
                <fullName>10000150</fullName>
            </value>
            <value>
                <fullName>10000151</fullName>
            </value>
            <value>
                <fullName>10000152</fullName>
            </value>
            <value>
                <fullName>10000153</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>