cmss/main/default/objects/LoanCaseDoc__c/fields/ReceiveDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiveDate__c</fullName>
    <description>Datum doručení</description>
    <label>Receive Date</label>
    <type>Date</type>
</CustomField>