cmss/main/default/objects/LoanCaseDoc__c/fields/RequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>RequestedAmount__c</fullName>
    <label>Requested Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>