cmss/main/default/objects/LoanCaseDoc__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Text</description>
    <label>Text</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>