cmss/main/default/objects/LoanCaseDoc__c/fields/TextShort__c.field-meta.xml
<CustomField>
    <fullName>TextShort__c</fullName>
    <label>Text Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>